# expergen

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: main.py
expergen/: __init__.py  dataclass_utils.py  json_utils.py
src/expergen/: __init__.py  base_classes.py  dataclass_utils.py  json_utils.py
tests/: test_dataclass_utils.py  test_json_utils.py
