[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project]
name = "expergen"
version = "0.1.0"
authors = [
    { name = "Jakub Sido", email = "jakubsido@gmail.com" },
]
description = "A package for creating and manipulating experiment generators"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jakubsido/expergen"
"Bug Tracker" = "https://github.com/jakubsido/expergen/issues"
